--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,18 @@
 server:
-  port: 1234
+  port:  5000    #changed as per the requirement of AWS Deployment  
   servlet:
     context-path: /lms
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/LMS_DB
-    username: postgres   #changed as per Local DB
-    password: mypostgres   #changed as per Local DB
+    url: jdbc:postgresql://lms.cqdisb7imatj.us-east-1.rds.amazonaws.com:5432/LMS_DB  # replace localhost with lms.cqdisb7imatj.us-east-1.rds.amazonaws.com
+    username: postgres   #changed as per AWS RDB
+    password: password   #changed as per AWS RDB
   jackson.deserialization.fail-on-unknown-properties: true
   jackson.serialization.fail-on-empty-beans: false  # LMSPhase2 changes
   mvc.hiddenmethod.filter.enabled: true
   main.allow-bean-definition-overriding: true
   #hibernate ddl Auto for CURDOperations
-  jpa.hibernate.ddl-auto: none
+  jpa.hibernate.ddl-auto: update
 
 logging:
   file:
