--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,10 @@
 			<version>4.7.0</version>
 		</dependency>
 		<dependency>
+		       <groupId>org.springframework.boot</groupId>
+		       <artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
